--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,15 @@
   <div id="main-row">
     <div class="content row">
       <div class="col-md-12">
+        graylog query:
+        <input class="ace_line"></input>
       </div>
     </div>
   </div>
 </body>
+
+<script>
+  document.querySelector(".ace_line").textContent = "text:abc678"
+</script>
 
 </html>
