Save disabled filters

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 </body>
 
 <script>
-  document.querySelector(".ace_line").textContent = "text:abc678"
+  // document.querySelector(".ace_line").textContent = "text:abc678"
 </script>
 
 </html>
